feat: 리스트일 경우 북마크 여부